--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "tailwindcss": "^3.4.3",
     "typescript": "^5.2.2",
     "vite": "^5.2.0"
+  },
+  "dependencies": {
+    "ts-toastify": "^1.0.0"
   }
 }
